cicd/k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: REPLACE_ME_REGISTRY/backend-image:latest
        ports:
        - containerPort: 8080
        imagePullSecrets:
          - name: my-regcred
