cicd/k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: REPLACE_ME_REGISTRY/frontend-image:latest # TODO replace with repo address
        ports:
        - containerPort: 3000
