cicd/k8s/bentoml-service.yml
apiVersion: v1
kind: Service
metadata:
  name: bentoml-service
  labels:
    app: bentoml-service
spec:
  selector:
    app: bentoml-service
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
  type: ClusterIP
